--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -214,70 +214,24 @@
 
                         <div class="tabContents fontCase01 paddingBox">
                             <ul>
-                                <li>
-                                    <a href="#">
-                                        <div class="imgBox"
-                                             style="background-image: url({% static 'images/villa01.png' %});">
-                                            행복빌라 A동
-                                        </div>
-                                        <div>
-                                            <strong>행복빌라 A동<small>월세</small></strong>
-                                            <p>
-                                                학교앞 100m거리 편의점에 위치한 원룸입니다.<br/>
-                                                좋은 입지조건과 깨끗한 관리로 신식 건물 못지않게 좋습니다.<br/>
-                                                도보 15분 거리에 동대문역이 있어 대중교통 또한 편리합니다.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="imgBox"
-                                             style="background-image: url({% static 'images/villa02.png' %});">
-                                            행복빌라 A동
-                                        </div>
-                                        <div>
-                                            <strong>행복빌라 A동<small>월세</small></strong>
-                                            <p>
-                                                학교앞 100m거리 편의점에 위치한 원룸입니다.<br/>
-                                                좋은 입지조건과 깨끗한 관리로 신식 건물 못지않게 좋습니다.<br/>
-                                                도보 15분 거리에 동대문역이 있어 대중교통 또한 편리합니다.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="imgBox"
-                                             style="background-image: url({% static 'images/villa03.png' %});">
-                                            행복빌라 A동
-                                        </div>
-                                        <div>
-                                            <strong>행복빌라 A동<small>월세</small></strong>
-                                            <p>
-                                                학교앞 100m거리 편의점에 위치한 원룸입니다.<br/>
-                                                좋은 입지조건과 깨끗한 관리로 신식 건물 못지않게 좋습니다.<br/>
-                                                도보 15분 거리에 동대문역이 있어 대중교통 또한 편리합니다.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <div class="imgBox"
-                                             style="background-image: url({% static 'images/villa04.png' %});">
-                                            행복빌라 A동
-                                        </div>
-                                        <div>
-                                            <strong>행복빌라 A동<small>월세</small></strong>
-                                            <p>
-                                                학교앞 100m거리 편의점에 위치한 원룸입니다.<br/>
-                                                좋은 입지조건과 깨끗한 관리로 신식 건물 못지않게 좋습니다.<br/>
-                                                도보 15분 거리에 동대문역이 있어 대중교통 또한 편리합니다.
-                                            </p>
-                                        </div>
-                                    </a>
-                                </li>
+                                {% for data in oneroom %}
+                                    <li>
+                                        <a href="{% url 'oneroom:detail' data.id %}">
+                                            <div class="imgBox"
+                                                 style="background-image: url({{ data.file_set.last.file.url }});">
+                                                행복빌라 A동
+                                            </div>
+                                            <div>
+                                                <strong>{{ data.title }}<small>월세</small></strong>
+                                                <p>
+                                                    학교앞 100m거리 편의점에 위치한 원룸입니다.<br/>
+                                                    좋은 입지조건과 깨끗한 관리로 신식 건물 못지않게 좋습니다.<br/>
+                                                    도보 15분 거리에 동대문역이 있어 대중교통 또한 편리합니다.
+                                                </p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
