--- a/templates/community/index.html
+++ b/templates/community/index.html
@@ -5,60 +5,67 @@
             <div class="leftContArea">
                 <ul class="commuListBox">
                     {% for post in post %}
-                    <li>
-                        <a href="{% url 'community:detail' post.id %}">
-                            <div class="imgBox" style="background-image: url(../../media/{{ post.file_set.all.0.file }});">
-                                이미지
-                            </div>
-                            <div class="textArea">
-                                <strong>{{ post.title }}</strong>
-                                <p>{{ post.content }}</p>
-                                <div class="iconBox">
-                                    <div class="imgBox upIcon">
-                                        업 아이콘
+                        <li>
+                            <a href="{% url 'community:detail' post.id %}">
+                                {% if post.file_setall.0.file.url %}
+                                    <div class="imgBox"
+                                         style="background-image: url({{ post.file_set.all.0.file.url }});">
+                                        이미지
                                     </div>
-                                    <span>
+                                {% endif %}
+                                <div class="textArea">
+                                    <strong>{{ post.title }}</strong>
+                                    <p>{{ post.content|slice:":20" }}...</p>
+                                    <div class="iconBox">
+                                        <div class="imgBox upIcon">
+                                            업 아이콘
+                                        </div>
+                                        <span>
                                         10
                                     </span>
-                                    <div class="imgBox downIcon">
-                                        다운 아이콘
-                                    </div>
-                                    <span>
+                                        <div class="imgBox downIcon">
+                                            다운 아이콘
+                                        </div>
+                                        <span>
                                         10
                                     </span>
-                                    <div class="imgBox commentIcon">
-                                        댓글 아이콘
-                                    </div>
-                                    <span>
+                                        <div class="imgBox commentIcon">
+                                            댓글 아이콘
+                                        </div>
+                                        <span>
                                         5
                                     </span>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="writerArea">
-                                <time>2시간전</time>
-                                <b>개굴개굴개구리</b>
-                            </div>
-                        </a>
-                    </li>
+                                <div class="writerArea">
+                                    <time>{{ post.create_date }}</time>
+                                    <b>{{ post.author }}</b>
+                                </div>
+                            </a>
+                        </li>
                     {% endfor %}
 
-                <div class="pageBox">
-                    <a href="#"><mark>&lt;</mark>이전</a>
-                    <ol>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">6</a></li>
-                    </ol>
-                    <a href="#">다음<mark>&gt;</mark></a>
-                </div>
+                    <div class="pageBox">
+                        <a href="#">
+                            <mark>&lt;</mark>
+                            이전</a>
+                        <ol>
+                            <li class="active"><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">6</a></li>
+                        </ol>
+                        <a href="#">다음
+                            <mark>&gt;</mark>
+                        </a>
+                    </div>
 
-                <div class="seachBox">
-                    <input type="search">
-                    <button>검색버튼</button>
-                </div>
+                    <div class="seachBox">
+                        <input type="search">
+                        <button>검색버튼</button>
+                    </div>
             </div>
             <aside>
                 <div class="boardArea">
