--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -24,54 +24,14 @@
                             <!-- 실시간 인기 게시물 -->
                             <strong>실시간 인기 게시물 <a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                <li>
-                                    <a href="#">
-                                        <p>냥이 가족이 되었다</p>
-                                        <time>10.20 15:20</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>담보대출 서비스 재개 안내 </p>
-                                        <time>10.20 15:20</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>총학이란 무엇인가?</p>
-                                        <time>10.20 15:20</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>퍼스트 원화 발행어음 수익률...</p>
-                                        <time>10.20 15:20</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>복학후 달라진 점</p>
-                                        <time>10.20 15:20</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>슬기로운 대학생활 안내</p>
-                                        <time>10.20 15:20</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>맛집 분석 best 10</p>
-                                        <time>10.20 15:20</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>찾아가는 입시설명회</p>
-                                        <time>10.20 15:20</time>
-                                    </a>
-                                </li>
+                                {% for data in community %}
+                                    <li>
+                                        <a href="{% url "community:detail" data.id %}">
+                                            <p>{{ data.title }}</p>
+                                            <time>10.20 15:20</time>
+                                        </a>
+                                    </li>
+                                {% endfor %}
                             </ul>
                         </div>
 
@@ -79,30 +39,14 @@
                         <div class="borderBox paddingBox">
                             <strong>자유게시판<a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                <li>
-                                    <a href="#">
-                                        <p>디자인과 라이프스타일을 큐레이션 하다</p>
-                                        <time>방금</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>돈으로 시간을 사는 방법</p>
-                                        <time>2분전</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>혹시 화이자 2차 맞고 부정출혈 오신분 있나...</p>
-                                        <time>2분전</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>내일 독서실 갈까 말까?</p>
-                                        <time>8분전</time>
-                                    </a>
-                                </li>
+                                {% for data in community2 %}
+                                    <li>
+                                        <a href="{% url "community:detail" data.id %}">
+                                            <p>{{ data.title }}</p>
+                                            <time>10.20 15:20</time>
+                                        </a>
+                                    </li>
+                                {% endfor %}
                             </ul>
                         </div>
 
@@ -110,30 +54,14 @@
                         <div class="borderBox paddingBox">
                             <strong>비밀게시판<a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                <li>
-                                    <a href="#">
-                                        <p>오일세안 후 나타나는 피부 변화</p>
-                                        <time>방금</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>우리가 자주 먹는 과자 속 비하인드 스토리</p>
-                                        <time>2분전</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>맛있는 밀크티 만드는 비법 전수</p>
-                                        <time>2분전</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>학교 책상 내맘대로 리폼하기 </p>
-                                        <time>8분전</time>
-                                    </a>
-                                </li>
+                                {% for data in community2 %}
+                                    <li>
+                                        <a href="{% url "community:detail" data.id %}">
+                                            <p>{{ data.title }}</p>
+                                            <time>10.20 15:20</time>
+                                        </a>
+                                    </li>
+                                {% endfor %}
                             </ul>
                         </div>
 
@@ -141,30 +69,14 @@
                         <div class="borderBox paddingBox">
                             <strong>정보게시판<a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                <li>
-                                    <a href="#">
-                                        <p>디자인과 라이프스타일을 큐레이션 하다</p>
-                                        <time>방금</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>돈으로 시간을 사는 방법</p>
-                                        <time>2분전</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>혹시 화이자 2차 맞고 부정출혈 오신혹시 화이자 2차 맞고 부정출혈 오신</p>
-                                        <time>2분전</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>내일 독서실 갈까 말까?</p>
-                                        <time>8분전</time>
-                                    </a>
-                                </li>
+                                {% for data in community2 %}
+                                    <li>
+                                        <a href="{% url "community:detail" data.id %}">
+                                            <p>{{ data.title }}</p>
+                                            <time>10.20 15:20</time>
+                                        </a>
+                                    </li>
+                                {% endfor %}
                             </ul>
                         </div>
 
@@ -172,30 +84,14 @@
                         <div class="borderBox paddingBox">
                             <strong>홍보게시판<a href="#">+</a></strong>
                             <ul class="hoverEvent">
-                                <li>
-                                    <a href="#">
-                                        <p>오일세안 후 나타나는 피부 변화</p>
-                                        <time>방금</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>우리가 자주 먹는 과자 속 비하인드 스토리</p>
-                                        <time>2분전</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>맛있는 밀크티 만드는 비법 전수</p>
-                                        <time>2분전</time>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <p>학교 책상 내맘대로 리폼하기 </p>
-                                        <time>8분전</time>
-                                    </a>
-                                </li>
+                                {% for data in community2 %}
+                                    <li>
+                                        <a href="{% url "community:detail" data.id %}">
+                                            <p>{{ data.title }}</p>
+                                            <time>10.20 15:20</time>
+                                        </a>
+                                    </li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -270,7 +166,7 @@
                                     <p>
                                         <time>{{ data.create_date }}</time>
                                         {{ data.title }}
-                                        <strong>605,000원</strong>
+                                        <strong>{{ data.price }}원</strong>
                                     </p>
                                     <small>목포대학교 근처</small>
                                 </a>
