중고거래 작성하기 삭제

--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -49,7 +49,7 @@
                 <a href="#">다음
                     <mark>&gt;</mark>
                 </a>
-                <button class="writeBtn" onclick="location.href='{% url 'usedtrade:create_post' %}'">작성하기</button>
+{#                <button class="writeBtn" onclick="location.href='{% url 'usedtrade:create_post' %}'">작성하기</button>#}
             </div>
             <div class="seachBox">
                 <input type="text">
